# C2

./: .gitignore  .gitmodules  CMakeLists.txt  benchmark.cpp  test.cpp  test_coco.cpp
baseline_art/: art_wrapper.hpp  cart_wrapper.hpp
baseline_art/art/: art.hpp
baseline_art/include/: art.hpp
baseline_coco/: CoCo-trie_v1.hpp  CoCo-trie_v2.hpp  coco_cc.hpp  coco_wrapper.hpp  defs.hpp  louds_cc.hpp  louds_sux.hpp  recursive_coco.hpp  recursive_trie.hpp  static_bit_vector.hpp  uncompacted_trie.hpp  utils.hpp
baseline_coco/coco/: CoCo-trie_v1.hpp  CoCo-trie_v2.hpp  utils.hpp
baseline_coco/include/: CoCo-trie_v2.hpp
baseline_fst/: fst_wrapper.hpp
baseline_marisa/: build_marisa.sh  marisa_wrapper.hpp
baseline_marisa/include/marisa/: key.h
baseline_marisa/marisa/: configure~
baseline_pdt/: bit_strings.hpp  compacted_trie_builder.hpp  compressed_string_pool.hpp  path_decomposed_trie.hpp  pdt_wrapper.hpp  vbyte_string_pool.hpp
baseline_pdt/include/: bit_strings.hpp  compacted_trie_builder.hpp  path_decomposed_trie.hpp  vbyte_string_pool.hpp
include/: alphabet.hpp  basic_strpool.hpp  bit_vector.hpp  bit_vector_builder.hpp  coco_cc.hpp  coco_optimizer.hpp  compressed_string_pool.hpp  counting_bloom_filter.hpp  fst_builder.hpp  fst_cc.hpp  fst_cc_builder.hpp  key_set.hpp  louds_cc.hpp  louds_cc2.hpp  louds_dense_cc.hpp  louds_marisa.hpp  louds_sparse_cc.hpp  louds_sux.hpp  ls4coco.hpp  ls4patricia.hpp  marisa_cc.hpp  repair.hpp  repair_strpool.hpp  static_bit_vector.hpp  static_vector.hpp  strpool.hpp  uncompressed_strpool.hpp  utils.hpp
